--- a/templates/footer-primary.twig
+++ b/templates/footer-primary.twig
@@ -89,13 +89,15 @@
 
 	<!-- Newsletter -->
 	<div class="col-md-6 offset-md-0 {{footer_secondary.get_items ? 'col-lg-3' : 'col-lg-3 offset-lg-3' }}">
-		<div class="footer-primary-content footer-newsletter">
-			<h4>Sign Up for Our Newsletter</h4>
-			{% filter shortcodes %}
-				[gravityform id={{newsletter}}
-				title=false description=false]
-			{% endfilter %}
-		</div>
+		{% if options.footer_newsletter %}
+			<div class="footer-primary-content footer-newsletter">
+				<h4>Sign Up for Our Newsletter</h4>
+				{% filter shortcodes %}
+					[gravityform id={{newsletter}}
+					title=false description=false]
+				{% endfilter %}
+			</div>
+		{% endif %}
 	</div>
 	<!-- Logo -->
 	<div class="col-md-5 offset-md-1 col-lg-3 offset-lg-9">
