--- a/templates/base.twig
+++ b/templates/base.twig
@@ -62,6 +62,11 @@
 						{% block header %}
 
 									<div class="row">
+										<div class="col-12">
+											<div class="header-translate">
+												<div id="google_translate_element"></div>
+											</div>
+										</div>
 
 										<div class="col-8 col-md-4 col-lg-3 col-xl-2">
 											{% set logo = TimberImage(options.header_logo) %} 
@@ -175,5 +180,15 @@
 					{% endblock %}
 				
 		</div>
+		<script type="text/javascript">
+			function googleTranslateElementInit() {
+				new google.translate.TranslateElement({
+					pageLanguage: 'en',
+					includedLanguages: 'es',
+					layout: google.translate.TranslateElement.FloatPosition.TOP_LEFT
+					}, 'google_translate_element');
+				}
+		</script>
+		<script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 	</body>
 </html>
