--- a/src/scss/spm.scss
+++ b/src/scss/spm.scss
@@ -293,8 +293,11 @@ body {
 }
 
 .footer-logo img {
-  margin-bottom: 20px;
   max-width: 100%;
+
+  &+img {
+    margin-top: 20px;
+  }
 }
 
 @media (min-width: 768px) {
